syntax = "proto3";

package bulktelem.v1;

service BulkTelemService {
  rpc CreateStream(stream BulkTelemServiceCreateStreamRequest) returns (stream BulkTelemServiceCreateStreamResponse);
}

message BulkTelemServiceCreateStreamRequest {
  string ChannelConfigID = 1;
  int64 StartTS = 2;
  bytes Data = 3;
}

message BulkTelemServiceCreateStreamResponse {
  BulkTelemServiceError Error = 1;
}

message BulkTelemServiceError {
  int32 Type = 1;
  string TypeString = 2;
  string Message = 3;
}